@@ -65,6 +65,9 @@
     <File name="src/Backends/EDS/EDSCategory.cs" subtype="Code" buildaction="Compile" />
     <File name="src/Backends/EDS/EDSNote.cs" subtype="Code" buildaction="Compile" />
     <File name="src/Backends/EDS/EDSTask.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/GnomeApplication.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/NativeApplication.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/WindowsApplication.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="glib-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
@@ -80,6 +83,7 @@
     <ProjectReference type="Gac" localcopy="True" refto="Mono.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
     <ProjectReference type="Gac" localcopy="True" refto="System.Xml, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </References>
+  <GtkDesignInfo />
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="Makefile.am" ExecuteTargetName="run" IsAutotoolsProject="True" RelativeConfigureInPath=".">
     <BuildFilesVar />
     <DeployFilesVar />
