@@ -1,5 +1,12 @@
 2008-09-26  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
+	* tasque.mdp, src/Makefile.am: Add new files.
+	* src/Defines.cs: Keep Defines.cs in sync.  Should do this better,
+	  though, but I'm tired.
+	* src/Application.cs, src/GnomeApplication.cs: Typo fix.
+
+2008-09-26  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
 	* tasque.sln, tasque.csproj: Visual Studio 2008 solution for building
 	  Tasque with the Dummy and RTM backends.
 	* src/Application.cs, src/NativeApplication.cs, src/GnomeApplication.cs,
